[package]
name = "portfolio-performance-conv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
iced = "0.13.1"
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rfd = "0.15.3"
rust_decimal = { version = "1.37.1", features = ["macros", "maths"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
